updated file 25 January 2015

--- a/ChickWeightApp.html
+++ b/ChickWeightApp.html
@@ -847,7 +847,7 @@ hljs.initHighlightingOnLoad();
 <section data-transition="linear" data-transition-speed="default">
 <h3>SAMPLE REGRESSION MODEL</h3>
 <div class="mediaInline slideContent" >
-<pre><code class="r">source (&quot;helpers.R&quot;) #source code available from 
+<pre><code class="r">source (&quot;helpers.R&quot;) #source code available from https://github.com/eldube/ChickWeightPres
 diet &lt;- 1
 data &lt;- ChickWeight
 model &lt;-  getDietModel(ChickData = data, dietchoice = diet)
